--- a/WebContent/CadastroEmbalagem.xhtml
+++ b/WebContent/CadastroEmbalagem.xhtml
@@ -16,6 +16,7 @@
     <h:outputStylesheet library="css" name="WebRefeicoes.css" />
     <h:outputScript library="jquery" name="jquery-ui-1.9.2.custom.js" />
     <h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css"/>
+    <h:outputScript library="bootstrap/js" name="bootstrap.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
     <h:outputScript library="jquery" name="jqueryMaskedPlugin.js" />
 </h:head>
@@ -81,7 +82,7 @@
 			selectionMode="single"
 			var="embalagem" 
 			style="padding: 0px 15px;"
-			scrollHeight="50%"
+			scrollHeight="600"
 			selection="#{embalagemController.selecionaEmbalagem}"
 			rowKey="#{embalagem.codigo}"
 			value="#{embalagemController.listaEmbalagems()}">
