--- a/WebContent/PerfilCliente.xhtml
+++ b/WebContent/PerfilCliente.xhtml
@@ -17,6 +17,7 @@
     <h:outputStylesheet library="css" name="WebRefeicoes.css" />
     <h:outputScript library="jquery" name="jquery-ui-1.9.2.custom.js" />
     <h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css"/>
+   <h:outputScript library="bootstrap/js" name="bootstrap.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
     <h:outputScript library="jquery" name="jqueryMaskedPlugin.js" />
     <style>
@@ -44,7 +45,7 @@
 				    	 <div class="col-lg-12 col-md-12 col-sm-12" style="box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)!important;background: #f5f5f5;margin: 10px;border:1px solid #eee;">
 				 			<div class="col-lg-12">
 				 				<p style="height: 20px">
-				 				<a href='' class="pull-right" onclick="carregar('ConfiguracaoPerfilCliente.xhtml')" style="font-size: 15px;padding-left: 10px;color: #737373;">
+				 				<a href='' class="pull-right" onclick="load('ConfiguracaoPerfilCliente.xhtml','Configuração de Perfil')" style="font-size: 15px;padding-left: 10px;color: #737373;">
 			        				<i class="fa fa-edit"></i> Editar perfil
 			        			</a>
 					        	</p>
