--- a/WebContent/CadastroBebida.xhtml
+++ b/WebContent/CadastroBebida.xhtml
@@ -16,10 +16,11 @@
     <h:outputStylesheet library="css" name="WebRefeicoes.css" />
     <h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css"/>
     <h:outputScript library="jquery" name="jquery-ui-1.9.2.custom.js" />
+    <h:outputScript library="bootstrap/js" name="bootstrap.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
 </h:head>
 <h:body>
-			<div class="row">
+			<div  class="container-fluid" style="padding: 0px;">
 			
 				<h:form id="formulario">
 					<p:growl id="messages" life="5000"/>
@@ -90,7 +91,8 @@
 			scrollable="true"
 			selectionMode="single"
 			var="bebida" 
-			scrollHeight="200px"
+			scrollHeight="600"
+			style="padding: 0px 15px"
 			selection="#{bebidaController.selecionaBebida}"
 			rowKey="#{bebida.codigo}"
 			value="#{bebidaController.listaBebidas}">
