--- a/WebContent/ConsultaAvaliacao.xhtml
+++ b/WebContent/ConsultaAvaliacao.xhtml
@@ -16,6 +16,7 @@
     <h:outputStylesheet library="css" name="WebRefeicoes.css" />
     <h:outputStylesheet name="webjars/font-awesome/4.4.0/css/font-awesome.css"/>
     <h:outputScript library="jquery" name="jquery-ui-1.9.2.custom.js" />
+    <h:outputScript library="bootstrap/js" name="bootstrap.js" />
     <h:outputScript library="bootstrap/js" name="bootstrap.min.js" />
 </h:head>
 <h:body>
@@ -113,7 +114,7 @@
 			scrollable="true"
 			selectionMode="single"
 			var="avaliacao" 
-			scrollHeight="200px"
+			scrollHeight="600"
 			selection="#{avaliacaoController.selecionaAvaliacao}"
 			rowKey="#{avaliacao.codigo}"
 			value="#{avaliacaoController.listaAvaliacaos}">
