--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -22,7 +22,7 @@
     	.ui-selectoneradio label {
 		    display: block;
 		    margin-top: 4px;
-		    color: white;
+		    color:  #737373;;
 		    padding: 0px 10px;
 		}
     </style>
@@ -45,7 +45,7 @@
 	<div class="containerLogin">
 		<div class="conteudoLogin">
 			<h:form id="login">
-				<p:messages id="messages" />
+				<p:growl id="messages" />
 				<div class="form-group">
 						<p:inputText style="width: 100%" 
 						id="usuario"
@@ -65,7 +65,7 @@
 						</a>
 					</div>
 					<div class="form-group">
-					<p:selectOneRadio >
+					<p:selectOneRadio value="#{loginController.userLogado}">
 			            <f:selectItem itemLabel="Sou Cliente" itemValue="cliente" />
 			            <f:selectItem itemLabel="Sou Funcionário" itemValue="funcionario" />
 			        </p:selectOneRadio>
@@ -81,13 +81,20 @@
 	<div id="modalEsqueciSenha" class="modal fade" role="dialog">
 		  <div class="modal-dialog">
 		
-		    Modal content
 		    <div class="modal-content">
 		      <div class="modal-header headerWebRefeicoes">
 		        <button type="button" class="close" data-dismiss="modal" style="    color: white;">&times;</button>
 		        <h4 class="modal-title">Recuperação de Senha</h4>
 		      </div>
 		      <div class="modal-body">
+		      	<h:form>
+		      		<div class="form-group"  style="color: black">
+						<p:selectOneRadio value="#{loginController.userLogado}">
+				            <f:selectItem itemLabel="Sou Cliente" itemValue="cliente" />
+				            <f:selectItem itemLabel="Sou Funcionário" itemValue="funcionario" />
+				        </p:selectOneRadio>
+					</div>
+		      	</h:form>
 		        <p>Digite um e-mail abaixo para prosseguir com a recuperação de e-mail.</p>
 		        <h:form id="senha">
 					<div class="form-group">
